model changes and improvements
